[gd_scene load_steps=9 format=3 uid="uid://ce43i43edb0sb"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_m25sn"]
[ext_resource type="Texture2D" uid="uid://bqq1pcvxla0im" path="res://assets/player/player_9mmhandgun.png" id="2_jmgxu"]
[ext_resource type="AudioStream" uid="uid://dhoq8c4lrj20w" path="res://assets/Sound/gun-shot-359196.mp3" id="4_bw0c2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jtrmv"]
radius = 24.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f4so4"]
radius = 20.0
height = 70.0

[sub_resource type="Animation" id="Animation_13ksw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserLine2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_mmcis"]
resource_name = "turn_laser_on"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserLine2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 6.0, 2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r4ipt"]
_data = {
"RESET": SubResource("Animation_13ksw"),
"turn_laser_on": SubResource("Animation_mmcis")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_m25sn")

[node name="LaserLine2D" type="Line2D" parent="."]
position = Vector2(1.02984, 10.5)
scale = Vector2(0.999486, 1.25)
points = PackedVector2Array(60, 0, 2000, 0)
width = 2.0
default_color = Color(0.760784, 0, 0, 1)

[node name="Body" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_jmgxu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-9, 0)
shape = SubResource("CapsuleShape2D_jtrmv")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2(-9, 0)
shape = SubResource("CapsuleShape2D_f4so4")

[node name="CameraRemoteTransform" type="RemoteTransform2D" parent="."]

[node name="ShootRaycast" type="RayCast2D" parent="."]
position = Vector2(65, 0)
target_position = Vector2(1000, 0)
collision_mask = 9
collide_with_areas = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bw0c2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r4ipt")
}

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
